# opensay

./: .gitignore  CLAUDE.md  README.md
docs/: architecture.md  plan.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: model_catalog.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: audio_cpal.rs  config_store.rs  hardware_detector.rs  mod.rs  model_manager.rs  output_manager.rs  privacy_guard.rs  whisper_cpp.rs
src-tauri/src/app/: controller.rs  mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: audio.rs  config.rs  error.rs  hardware.rs  mod.rs  model.rs  transcription.rs
src-tauri/src/infrastructure/: logging.rs
src-tauri/src/ports/: audio.rs  config.rs  hardware.rs  http.rs  mod.rs  model_manager.rs  output.rs  transcriber.rs
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
